k8s/cd/common/monitoring-policy/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: monitoring
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: opentelemetry-collector
      app.kubernetes.io/instance: monitoring.opentelemetry-kube-stack-daemon
      app.kubernetes.io/managed-by: opentelemetry-operator
      app.kubernetes.io/part-of: opentelemetry
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            k8s:app.kubernetes.io/name: envoy
            k8s:app.kubernetes.io/component: proxy
            k8s:gateway.envoyproxy.io/owning-gatewayclass: envoy-gateway
      toPorts:
        - ports:
            - port: "4317"
              protocol: TCP
